# backend/internal/handler/handler.go
@@ -139,6 +139,7 @@ func (h *Handler) SetupRouter() *gin.Engine {
 			auth.GET("/items/:id", h.getItem)
 			auth.PATCH("/items/-/read", h.markItemsRead)
 			auth.PATCH("/items/-/unread", h.markItemsUnread)
+			auth.PATCH("/items/-/read-all", h.markAllItemsRead)
 
 			auth.GET("/search", h.search)
 
